.k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: random-tvshow-app
  name: random-tvshow-app
  namespace: nextjs
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: random-tvshow-app
  sessionAffinity: None
