.k8s/ingressRouteProm.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
  namespace: prometheus
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/grafana`)
      kind: Rule
      services:
        - name: prometheus-grafana
          port: 80
